# open2jam-rs

./: .gitignore  Cargo.toml  PROJECT_OVERVIEW.md  QWEN.md  download_fonts.sh
assets/skins/: README.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  game_options.rs  key_bindings.rs  lib.rs
crates/core/src/orchestrator/: mod.rs
crates/game/: Cargo.toml  build.rs
crates/game/src/: app.rs  assets.rs  cover_shader.wgsl  engine.rs  event_loop.rs  game_state.rs  input.rs  lib.rs  main.rs  main_menu.rs  render_game.rs  types.rs
crates/game/src/app/: frame.rs  menu_ctx.rs  mod.rs  render_ctx.rs  wgpu_init.rs  window.rs
crates/game/src/audio/: bgm_signal.rs  cache.rs  manager.rs  mod.rs  sync.rs  trigger.rs
crates/game/src/game_state/: effects.rs
crates/game/src/gameplay/: mod.rs  scroll.rs  timing_data.rs
crates/game/src/menu/: menu_app.rs
crates/game/src/menu/db/: mod.rs
crates/game/src/menu/panels/: mod.rs
crates/game/src/parsing/: mod.rs  ojm.rs  ojn.rs  xml.rs
crates/game/src/render/: hud.rs  mod.rs  pipeline.rs  textured_renderer.rs  thread.rs
crates/game/src/resources/: async_loading.rs  clock.rs  key_bindings.rs  mod.rs  skin_assets.rs
crates/game/src/skin/: mod.rs  prefab.rs
crates/menu/: Cargo.toml  build.rs
crates/menu/src/: app.rs  lib.rs  main.rs  menu_app.rs  ojn_scanner.rs
crates/menu/src/db/: models.rs
crates/menu/src/panels/: display_config.rs  key_bind_editor.rs  mod.rs  modifiers.rs
crates/ojn/: Cargo.toml
crates/ojn/src/: lib.rs
crates/open2jam-rs/: Cargo.toml
crates/open2jam-rs-core/src/: config.rs  game_options.rs  key_bindings.rs  lib.rs
crates/open2jam-rs-game/: Cargo.toml  build.rs
crates/open2jam-rs-game/src/: gpu.rs  types.rs
crates/open2jam-rs-game/src/app/: audio_ctx.rs  game_ctx.rs  mod.rs  window.rs
crates/open2jam-rs-game/src/audio/: cache.rs  sync.rs
crates/open2jam-rs-game/src/game_state/: animations.rs  entities.rs  stats.rs
crates/open2jam-rs-game/src/gameplay/: judgment.rs  mod.rs  timing_data.rs
crates/open2jam-rs-game/src/render/: atlas.rs  hud.rs  textured_renderer.rs  thread.rs
crates/open2jam-rs-menu/: Cargo.toml
crates/open2jam-rs-menu/src/: fonts.rs  menu_app.rs
crates/open2jam-rs-menu/src/db/: mod.rs
crates/open2jam-rs-menu/src/panels/: modifiers.rs
crates/open2jam-rs-parsers/: Cargo.toml
crates/open2jam-rs-parsers/src/: chart.rs  lib.rs  ojm.rs  ojn.rs
crates/open2jam-rs/src/: main.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: ojm.rs  ojn.rs  xml.rs
src/: engine.rs  game_state.rs  main.rs  test_harness.rs
src/audio/: bgm_signal.rs  cache.rs  manager.rs  mod.rs
src/gameplay/: judgment.rs  mod.rs  scroll.rs
src/parsing/: ojm.rs  ojn.rs  xml.rs
src/render/: atlas.rs  hud.rs  mod.rs  textured_renderer.rs
src/resources/: async_loading.rs  chart_model.rs  clock.rs  key_bindings.rs  mod.rs  state.rs
src/skin/: prefab.rs
test_assets/: README.md
