[package]
name = "open2jam-rs"
version = "0.1.0"
edition = "2021"
description = "O2Jam rhythm game port in Rust with wgpu + oddio"
build = "build.rs"

[dependencies]
open2jam-rs-core = { path = "../core" }
open2jam-rs-ojn = { path = "../ojn" }
wgpu = "29.0.1"
winit = { version = "0.30.13", features = ["rwh_06"] }
raw-window-handle = "0.6"
oddio = "0.7.4"
cpal = "0.17.3"
pollster = "0.3"
mint = "0.5"
bytemuck = { version = "1.25", features = ["derive"] }
lewton = "0.10"
hound = "3.5"
encoding_rs = "0.8"
quick-xml = "0.38"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rtrb = "0.3"

# Menu GUI dependencies (Phase 1: separate binary, same crate)
# Phase 2 (future): shared window with egui-wgpu integration will require
# aligning wgpu versions between game and egui.
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
egui_extras = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
sha2 = "0.10"
rfd = "0.15"

[[bin]]
name = "open2jam-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
