[package]
name = "open2jam-rs-menu"
version = "0.1.0"
edition = "2021"
description = "Menu GUI for open2jam-rs (egui + winit + wgpu)"

[dependencies]
open2jam-rs-core = { path = "../core" }
open2jam-rs-ojn = { path = "../ojn" }
eframe = "0.30"
egui = "0.30"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
walkdir = "2"
