[package]
name = "open2jam-rs-menu"
version = "0.1.0"
edition = "2021"
description = "Menu GUI for open2jam-rs (egui + winit + wgpu)"

[dependencies]
open2jam-rs-core = { path = "../core" }
open2jam-rs-ojn = { path = "../ojn" }
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
walkdir = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
sha2 = "0.10"
rfd = "0.15"

[[bin]]
name = "open2jam-rs-menu"
path = "src/main.rs"

[lib]
name = "open2jam_rs_menu"
path = "src/lib.rs"
