[package]
name = "open2jam-rs-game"
version = "0.1.0"
edition = "2021"
description = "O2Jam rhythm game engine library"
build = "build.rs"

[dependencies]
open2jam-rs-core = { path = "../open2jam-rs-core" }
open2jam-rs-parsers = { path = "../open2jam-rs-parsers" }
open2jam-rs-menu = { path = "../open2jam-rs-menu" }
wgpu = "29.0.1"
winit = { version = "0.30.13", features = ["rwh_06"] }
raw-window-handle = "0.6"
oddio = "0.7.4"
cpal = "0.17.3"
pollster = "0.3"
mint = "0.5"
bytemuck = { version = "1.25", features = ["derive"] }
lewton = "0.10"
hound = "3.5"
encoding_rs = "0.8"
quick-xml = "0.38"
thiserror = "1"
anyhow = "1"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rtrb = "0.3"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
egui_extras = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
sha2 = "0.10"
rfd = "0.15"
